[package]
name = "p2p-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["ping", "chatroom", "distributed-kv-store","distributed-fs"]

[features]
ping = []
dkv = []
chatroom = []
dfs = []


[dependencies]
tokio = { version = "1.19", features = ["full"] }
ping = {path = "ping"}
chatroom = {path = "chatroom"}
distributed-kv-store = {path = "distributed-kv-store"}
distributed-fs = {path = "distributed-fs"}