[package]
name = "p2p-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
libp2p = { version = "0.46", features = ["tcp-tokio"] }
tokio = { version = "1.19", features = ["full"] }
headers = "0.3"
axum = { version = "0.5.15", features = ["ws", "headers"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
futures = "0.3.1"
tracing = "0.1"
tracing-subscriber = "0.3"
