[package]
name = "p2p-rs"
version = "0.1.0"
edition = "2021"



[dependencies]
libp2p = { version = "0.46",  features = ["tcp-tokio"] }
tokio = { version = "1.19", features = ["full"] }
futures = "0.3.1"
clap = {version = "3.1.6", features = ["derive"]}
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"